--- a/worker/package.json
+++ b/worker/package.json
@@ -17,6 +17,9 @@
   ],
   "author": "NekroAgent Team",
   "license": "MIT",
+  "dependencies": {
+    "esbuild-wasm": "^0.20.0"
+  },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241127.0",
     "wrangler": "^3.94.0"
