--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -19,7 +19,5 @@ database_id = "1469ae3f-62bd-448e-833c-b39703e0b953" # 请替换为你的 Databa
 # 数据库初始化标志（Worker 首次运行时自动初始化）
 DB_INITIALIZED = "false"
 
-[[rules]]
-type = "CompiledWasm"
-globs = ["**/*.wasm"]
-fallthrough = true
+[wasm_modules]
+ESBUILD_WASM = "node_modules/esbuild-wasm/esbuild.wasm"
