--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -72,6 +71,9 @@ worker/dist/
 worker/.wrangler/
 worker/.dev.vars
 worker/.mf/
+
+# Local Compiler Runtime
+services/local_compiler/node_runtime/
 
 # Logs
 *.log
